newspaper/web_app.css
html, body, #map {
    width: 100%;
    height: 100%;
    margin: 0;
    font-family: "Alegreya", serif;
}

body {
    display: flex;
    flex-direction: row;
}

.sidebar {
    flex: 0 0 20%;
    background-color: #E2E2E2;
    box-shadow: 4px 0px 4px 0px rgba(0, 0, 0, 0.25);
    z-index: 900;
    height: 100vh;
    display: flex;
    flex-direction: column; 
}

.logo{
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 10px 0;
}

#map {
    flex: 1; 
}

p {
    padding: 0;
    margin: 0px;
    font-size: 12px;
    line-height: 1.25;
}

.popup-article {
    max-width: 550px;
    /* width: 100%; */
    width: fit-content;
    box-sizing: border-box; 
    line-height: 1.1;
    padding: 0px;
    border-radius: 10px;
    fill: #F5F5F5;
}

a {
    text-decoration: none;
}

.popup-article-title {
    font-size: 16px;
    font-weight: 700;
    color: #000000;
    text-decoration: underline 1px black;
    text-underline-offset: 2px;
    margin-bottom: 8px;
}

.popup-article-info {
    display: flex;
    flex-wrap: wrap; 
    justify-content: space-between; 
    gap: 5px;
    margin: 0;
    padding: 0;
}

p.popup-article-category,
p.popup-article-location,
p.popup-article-source {
    border-radius: 999px;
    font-size: 11px;
    letter-spacing: -0.11px;
    line-height: 1.25;
    font-weight: 500;
    white-space: nowrap;
    margin: 0;
    padding: 2px 6px;
} 

.popup-tags {
    display: flex;
    flex-wrap: wrap; 
    gap: 5px;
    margin: 0;
    padding: 0;
    align-items: center;
    max-width: 80%;
}

.popup-article-category {
    color: #f5f5f5;
}

.popup-article-location {
    color: #00314C;
    background-color: #c1d4e0;
}

.popup-article-source {
    color: #f5f5f5;
    background-color: #9f9f9f;
}

p.popup-article-date {
    display: inline-block;
    font-size: 11px;
    font-weight: 500;
    white-space: nowrap;
    padding: 0;
    padding-top: 2px;
    margin: 0;
}

.popup-article-summary {
    color: #00314C;
    font-family: "Alegreya", serif;
    font-size: 13px;
    font-style: normal;
    font-weight: 500;
    line-height: 125%;
    letter-spacing: -0.11px;
    padding: 0;
    margin-top: 4px;
    gap: 4px;
    /* padding: 5px 0; */
}

.category-toggle-control {
    display: inline-flex; 
    flex-direction: column;
    align-items: flex-end; 
    padding: 10px;
    gap: 10px;
    z-index: 1000;
}

.category-toggle-btn {
    display: inline-flex;  
    justify-content: flex-end; 
    align-items: center; 
    text-align: right;
    font-size: 14px;
    font-style: normal;
    font-weight: 500;
    width: auto;
    min-width: 0; 
    max-width: none;
    gap: 10px;
    cursor: pointer;
    padding: 5px 10px;
    border-radius: 999px;
    color: #f5f5f5;
    box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
    opacity: 1;
    transition: opacity 0.3s, transform 0.2s;
}

.sidebar, .leaflet-control {
    width: auto !important;
  }

.category-toggle-btn span {
    white-space: nowrap;
}

.category-toggle-btn img {
    width: 30px;
    height: 30px;
    flex-shrink: 0;
}

.category-toggle-btn:hover img {
    filter: brightness(1.2);
}

.category-toggle-btn.inactive {
    opacity: 0.3;
  }

.category-toggle-btn:hover {
    transform: scale(1.05);
}

#search-container {
    display: flex;
    flex-direction: row-reverse;
    background-color: white;
    border-radius: 999px;
    padding: 5px;
    box-shadow: 4px 4px 8px rgba(0,0,0,0.2);
}
 
#search-input {
    border: none;
    outline: none;
    padding: 5px 15px;
    font-size: 16px;
    background: none;
    width: 200px;
    font-family: "Alegreya", serif;
    padding-left: 0;
}
 
#search-button {
    background: none;
    border: none;
    cursor: pointer;
    padding: 5px;
    height: 40px;
}

#search-button img {
    width: 30px;
    height: 30px;
}

#map-controls {
    position: absolute;
    top: 10px;
    right: 20px;
    z-index: 9999;
    display: flex;
    gap: 10px;
    align-items: flex-start;
}

#map-buttons {
    display: flex;
    flex-direction: column-reverse;
    gap: 10px;
    align-items: flex-end;
}

#map-buttons {
    display: flex;
    flex-direction: column-reverse;
    gap: 10px;
    align-items: flex-end;
}

.leaflet-control-layers, .filter-button, .locate-user-button {
    background-color: #E2E2E2;
    border-radius: 999px;
    padding: 5px;
    border: none !important;
    box-shadow: 4px 4px 8px rgba(0,0,0,0.2) !important;
    cursor: pointer;
    transition: transform 0.2s;
    font-family: "Alegreya", serif;
    font-size: 14px;
}

.filter-button:hover, .locate-user-button:hover {
    transform: scale(1.05);
    transition: transform 0.2s;
}

.filter-button, .locate-user-button {
    padding: 0;
    width: 54px;
    height: 54px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.locate-user-button img, .filter-button img{
    width: 30px;
    height: 30px;
}

.leaflet-control-layers-expanded {
    background-color: #E2E2E2;
    border-radius: 10px;
    padding: 8px;
}


.leaflet-control-layers-expanded label {
    color: #00314C;
    font-size: 14px;
    display: flex;
    align-items: center;
    gap: 6px;
}

.leaflet-control-layers-expanded input[type="checkbox"], .leaflet-control-layers-expanded input[type="radio"]  {
    accent-color: #00314C;
    width: 14px;
    height: 14px;
}

.custom-zoom-container {
    display: flex;
    flex-direction: column;
    gap: 10px;
    z-index: 9999;
}

#left-map-controls {
    position: absolute;
    bottom: 20px;
    left: 20px;
    z-index: 9999;
  }

.zoom-out img, .zoom-in img{
    width: 30px;
    height: 30px;
}

.zoom-btn {
    width: 54px;
    height: 54px;
    border-radius: 50%;
    border: none;
    background-color: #E2E2E2;
    box-shadow: 4px 4px 8px rgba(0,0,0,0.2);
    cursor: pointer;
    transition: transform 0.2s ease;
    z-index: 9999;
    padding: 0;
    display: flex;
    align-items: center;
    justify-content: center;
}

.zoom-btn:hover {
    transform: scale(1.05);
}

.date-filters label {
    display: flex;
    align-items: center;
    cursor: pointer;
    font-size: 14px;
    gap: 8px;
    user-select: none;
}

.date-filters input[type="checkbox"] {
    appearance: none;
    width: 20px;
    height: 20px;
    border: 1px solid #00314C;
    font-size: 14px;
    font-family: "Alegreya", serif;
    border-radius: 50%;
    position: relative;
    background-color: white;
    cursor: pointer;
    transition: background-color 0.2s, box-shadow 0.2s;
}

.date-filters input[type="checkbox"]:hover {
    background-color: #c1d4e0; 
    box-shadow: inset 0 0 0 1px white; 
}

.date-filters input[type="checkbox"]:checked {
    background-color: #00314C;
    box-shadow: inset 0 0 0 4px white;
}

.date-filters {
    position: absolute;
    top: 0;
    right: 0;
    z-index: 9999;
    background-color: #E2E2E2;
    color: #00314C;
    padding: 10px 15px;
    border-radius: 10px;
    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.2);
    
    opacity: 0;
    visibility: hidden;
    pointer-events: none;
    transition: opacity 0.1s, visibility 0.1s;
}

.filter-button:hover .date-filters {
    opacity: 1;
    visibility: visible;
    pointer-events: auto;
}

.reset-view-button, .info-button {
    padding: 0;
    width: 54px;
    height: 54px;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #E2E2E2;
    border-radius: 999px;
    box-shadow: 4px 4px 8px rgba(0,0,0,0.2);
    cursor: pointer;
    transition: transform 0.2s;
}
  
.reset-view-button:hover,
.zoom-btn:hover, .info-button:hover {
    transform: scale(1.05);
}

.reset-view-button img, .info-button img {
    width: 30px;
    height: 30px;
}

.sidebar-content {
    max-height: 100vh;
    overflow-y: auto;
    padding: 15px;
}

/* Styl pojedynczego artykułu w sidebarze */
.sidebar-article {
    /* background: #f5f5f5; */
    background: white;
    margin-bottom: 10px;
    border-radius: 10px;
    padding: 20px;
    padding-top: 10px;
    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.2);
    /* cursor: pointer; */
}

.sidebar-article-title {
    font-weight: bold;
    font-size: 16px;
    margin-bottom: 5px;
}

.sidebar-article-summary {
    font-size: 14px;
    color: #555;
}

